# article_2026_kirkwood

./: .gitignore  LICENSE  README.md  pyproject.toml
article/: main.tex
data/: README.md
scripts/: make_figures.py  plot_ppp_population_dynamics.py  run_adaptive_d_scaling.py  run_scaling.py
scripts/iMPS/: README_imps_infinite.md  README_imps_linear_response.md  imps_linear_response.py  imps_linear_response_finite_ring_legacy.py  requirements_imps.txt  test_imps_infinite.py
src/kirkwood_article/: __init__.py
src/kirkwood_article/analysis/: __init__.py  density_bias.py  spatial_moments.py
src/kirkwood_article/experiments/: __init__.py  adaptive_d_scaling.py  configs.py  pair_analysis.py  scaling.py
src/kirkwood_article/io/: __init__.py  coordinate_traces.py
src/kirkwood_article/plotting/: __init__.py  figures.py
src/kirkwood_article/sim/: __init__.py  kernels.py  numba_sim_normal.py  observables.py  ssa_1d.py
src/kirkwood_article/stats/: __init__.py  batch_means.py
src/kirkwood_article/theory/: __init__.py  imps_linear_response.py  kernel_parameters.py  kirkwood_1d.py
tests/: test_adaptive_d_scaling.py  test_batch_means.py  test_coordinate_traces.py  test_kernels.py  test_observables.py  test_ppp_regression.py  test_reproducibility.py  test_spatial_moments.py  test_triplet_observables.py
