[project]
name = "kirkwood-article"
version = "0.1.0"
description = "Minimal reproducible scaling experiments comparing Kirkwood closure and spatial SSA simulations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "YegorGalkin" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "numba>=0.59",
  "matplotlib>=3.8",
  "pandas>=2.1",
  "joblib>=1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
imps = [
  "torch>=2.2",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "ipykernel>=6.29",
]

[dependency-groups]
imps = [
  "torch>=2.2",
]

[tool.uv]
default-groups = ["imps"]

[project.scripts]
run-scaling = "kirkwood_article.experiments.scaling:main"
run-adaptive-d-scaling = "kirkwood_article.experiments.adaptive_d_scaling:main"
run-imps-linear-response = "kirkwood_article.theory.imps_linear_response:main"
run-pair-analysis = "kirkwood_article.experiments.pair_analysis:main"
make-figures = "kirkwood_article.plotting.figures:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/kirkwood_article/sim/numba_sim_normal.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: long-running statistical regression tests",
]
